--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="thin">
-        <p>&#169; 2024 Airbnb, Inc.</p>
+        <p>&#169; 2024 InnQuisitor, Inc.</p>
     </div>
     <div>
         <a class="color-grey" href="#">Privacy</a>&#x2022;
