--- a/public/CSS/boilerPlate.css
+++ b/public/CSS/boilerPlate.css
@@ -46,10 +46,6 @@ a {
     text-decoration: none;
 }
 
-.brand-logo svg {
-    color: #FF385C;
-}
-
 .navbar-toggler-icon {
     font-size: 0.75rem;
 }
@@ -76,6 +72,7 @@ a {
     justify-content: space-between;
     padding: 1rem 0.5rem;
     background-color: #F7F7F7 !important;
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.25)
 }
 
 .navbar>div {
@@ -300,4 +297,18 @@ nav a {
 
 .portrait {
     display: none;
+}
+
+/* STYLING FOR PENDING DOT */
+
+.dot {
+    height: 13px;
+    width: 13px;
+    border-radius: 50%;
+    border: none;
+    box-shadow: 0 0 5px black, inset 0 0 5px #962500;
+    background-color: #FF2A08;
+    position: absolute;
+    top: -2px;
+    right: 4px;
 }
