--- a/views/layouts/boilerPlate.ejs
+++ b/views/layouts/boilerPlate.ejs
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbnb | Holiday rentals, cabins, beach houses &amp; more</title>
+    <title>InnQuisitor | Discover Your Perfect Stay</title>
     <link rel="icon" sizes="192x192"
-        href="https://a0.muscache.com/airbnb/static/icons/android-icon-192x192-c0465f9f0380893768972a31a614b670.png"/>
+        href="/assets/icon.png"/>
 
     <!-- BOOTSTRAP STYLE -->
 
@@ -22,10 +22,22 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-        <!-- MAPBOX STYLE AND SCRIPT -->
+    <!-- SYNCFUSION STYLES FOR CALENDER -->
 
-        <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
-        <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
+    <link href="https://cdn.syncfusion.com/ej2/25.1.35/ej2-base/styles/material.css" rel="stylesheet">
+    <link href="https://cdn.syncfusion.com/ej2/25.1.35/ej2-buttons/styles/material.css" rel="stylesheet">
+    <link href="https://cdn.syncfusion.com/ej2/25.1.35/ej2-inputs/styles/material.css" rel="stylesheet">
+    <link href="https://cdn.syncfusion.com/ej2/25.1.35/ej2-popups/styles/material.css" rel="stylesheet">
+    <link href="https://cdn.syncfusion.com/ej2/25.1.35/ej2-calendars/styles/material.css" rel="stylesheet">
+
+    <!-- MAPBOX STYLE AND SCRIPT -->
+
+    <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
+
+    <!-- AXIOS SCRIPT -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js" integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- CUSTOM STYLES -->
 
@@ -34,6 +46,8 @@
     <link rel="stylesheet" href="/CSS/new.css">
     <link rel="stylesheet" href="/CSS/details.css">
     <link rel="stylesheet" href="/CSS/edit.css">
+    <link rel="stylesheet" href="/CSS/reserve.css">
+    <link rel="stylesheet" href="/CSS/bookings.css">
     <link rel="stylesheet" href="/CSS/mediaQueries.css">
 
 </head>
