--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -8,8 +8,8 @@
                 </div>
                 <div class="row form-group">
                     <div class="col-md-12 col">
-                        <input id="username" class="form-control" type="text" placeholder="username..." name="username" maxlength="20" required>
-                        <div class="invalid-feedback">Please choose a username</div>
+                        <input id="username" class="form-control" pattern="^[a-zA-Z0-9]+(\s[a-zA-Z0-9]+)?$" type="text" placeholder="username..." name="username" maxlength="20" required>
+                        <div class="invalid-feedback">Please choose a valid username</div>
                     </div>
                 </div>
                 
