--- a/views/layouts/boilerPlate.ejs
+++ b/views/layouts/boilerPlate.ejs
@@ -48,6 +48,7 @@
     <link rel="stylesheet" href="/CSS/edit.css">
     <link rel="stylesheet" href="/CSS/reserve.css">
     <link rel="stylesheet" href="/CSS/bookings.css">
+    <link rel="stylesheet" href="/CSS/error.css">
     <link rel="stylesheet" href="/CSS/mediaQueries.css">
 
 </head>
