--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,8 +1,9 @@
 <%layout("layouts/boilerPlate")-%>
 <body>
     <div class="error">
-        <i class="fa-regular fa-face-frown"></i>
+        <i class="fa-regular fa-face-frown error-emo"></i>
         <h1><%=status%></h1>
         <h2><%=message%></h2>
+        <a href="/listing"><i class="fa-solid fa-house"></i></a>
     </div>
 </body>
