--- a/views/listings/reserve.ejs
+++ b/views/listings/reserve.ejs
@@ -27,7 +27,7 @@
 
             <p class="note"><b>Your reservation won't be confirmed until the host approves your request.</b><i>(You won't be charged until then)</i></p>
 
-            <form method="post" class="landscape-btn" action="/listing/<%=listing._id%>/reserve/request">
+            <form method="post" id="" class="landscape-btn" action="/listing/<%=listing._id%>/reserve/request">
                 <button class="submit-btn" type="submit">Request to book</button>
             </form>
         </div>
@@ -68,7 +68,7 @@
             </div>
         </div>
 
-        <form method="post" class="portrait" action="/listing/<%=listing._id%>/reserve/request">
+        <form method="post" id="" class="portrait" action="/listing/<%=listing._id%>/reserve/request">
             <button class="submit-btn reserve-portrait-btn" type="submit">Request to book</button>
         </form>
 
