--- a/views/layouts/boilerPlate.ejs
+++ b/views/layouts/boilerPlate.ejs
@@ -78,6 +78,8 @@
     <!-- CUSTOM SCRIPTS -->
 
     <script src="/JavaScript/navbar.js"></script>
+    <script src="/JavaScript/throttle.js"></script>
+
 </body>
 
 </html>
