--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -6,7 +6,7 @@
                 <img class="square-img" src="<%=data.image[0].url%>" alt="">
             </div>
             <div class="container form-container edit-form-container">
-                <form method="POST" action="/listing/<%=data._id%>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
+                <form method="POST" id="edit-form" action="/listing/<%=data._id%>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
                     <div class="row form-group">
                         <h2>Edit the Details</h2>
                     </div>
